--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,6 +22,9 @@ security:
                 csrf_provider: form.csrf_provider
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
+                always_use_default_target_path: true
+                default_target_path: admin_dashboard
+                use_referer: true
             logout:
                 path: fos_user_security_logout
                 target: fos_user_security_login
