--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,23 +2,23 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
-    
+
     # librarys
-    - { resource: knp/knp_paginator.yml }    
-    - { resource: sonata/sonata_seo.yml }    
-    - { resource: lunetics/lunetics_locale.yml }    
-    - { resource: stof/stof_doctrine.yml }    
+    - { resource: knp/knp_paginator.yml }
+    - { resource: sonata/sonata_seo.yml }
+    - { resource: lunetics/lunetics_locale.yml }
+    - { resource: stof/stof_doctrine.yml }
     - { resource: fos/fos_user.yml }
-    - { resource: fm/fm_elfinder.yml }    
+    - { resource: fm/fm_elfinder.yml }
     - { resource: liip/liip_imagine.yml }
-    
+
     # flowcode
     - { resource: flowcode/flowcode_page.yml }
     - { resource: flowcode/flowcode_shop.yml }
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -110,7 +110,7 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
-    
+
 braincrafted_bootstrap:
     icon_prefix: fa
     fontawesome_dir: %kernel.root_dir%/../vendor/fortawesome/font-awesome
@@ -126,7 +126,7 @@ braincrafted_bootstrap:
     customize:
         variables_file: ~
         bootstrap_output: %kernel.root_dir%/Resources/less/bootstrap.less
-        bootstrap_template: BraincraftedBootstrapBundle:Bootstrap:bootstrap.less.twig    
+        bootstrap_template: BraincraftedBootstrapBundle:Bootstrap:bootstrap.less.twig
 
 cmf_seo:
     original_route_pattern: redirect
@@ -137,10 +137,10 @@ ivory_ck_editor:
     default_config: default
     configs:
         default:
-            filebrowserBrowseRoute: elfinder    
+            filebrowserBrowseRoute: elfinder
 
 services:
     twig.extension.text:
         class: Twig_Extensions_Extension_Text
         tags:
-         - { name: twig.extension }        
+         - { name: twig.extension }
